exports[`consistent-type-exports > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "typeOverValue",
      "message": "All exports in the declaration are only used as types. Use \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 51
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "singleExportIsType",
      "message": "Type export Type2 is not a value and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 26
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "multipleExportsAreTypes",
      "message": "Type exports Alias and IFace are not values and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 9,
          "column": 1
        },
        "end": {
          "line": 9,
          "column": 33
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "typeOverValue",
      "message": "All exports in the declaration are only used as types. Use \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "typeOverValue",
      "message": "All exports in the declaration are only used as types. Use \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "typeOverValue",
      "message": "All exports in the declaration are only used as types. Use \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 43
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "singleExportIsType",
      "message": "Type export T is not a value and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 25
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "singleExportIsType",
      "message": "Type export T is not a value and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "typeOverValue",
      "message": "All exports in the declaration are only used as types. Use \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "multipleExportsAreTypes",
      "message": "Type exports Type1 and Type2 as Foo are not values and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 7,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "multipleExportsAreTypes",
      "message": "Type exports Type1 and Type2 as Foo are not values and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 7,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "typeOverValue",
      "message": "All exports in the declaration are only used as types. Use \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 58
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "singleExportIsType",
      "message": "Type export Type1 is not a value and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 59
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "singleExportIsType",
      "message": "Type export Type1 is not a value and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 67
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "multipleExportsAreTypes",
      "message": "Type exports Type1 and Type2 are not values and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 74
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "typeOverValue",
      "message": "All exports in the declaration are only used as types. Use \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 58
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "singleExportIsType",
      "message": "Type export Type2 as Foo is not a value and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 66
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "singleExportIsType",
      "message": "Type export Type2 as Foo is not a value and should be exported using \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 6,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-exports > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-exports",
      "messageId": "typeOverValue",
      "message": "All exports in the declaration are only used as types. Use \`export type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;
